# vox-legal-ai

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py
env/: env.py  grader.py  models.py
server/: app.py
